--- a/.github/workflows/conda-linux-release.yml
+++ b/.github/workflows/conda-linux-release.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: publish-to-conda-linux
-        uses: paskino/conda-package-publish-action@master
+        uses: BEFH/anaconda-publish@v1.5.1
         with:
           subDir: 'conda'
-          channels: '-c conda-forge -c bioconda -c defaults'
+          channels: 'conda-forge -c bioconda -c defaults'
           AnacondaToken: ${{ secrets.GENOMICEPIDEMIOLOGY_CONDA_AUTH_TOKEN }}
           publish: true
